--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="about-content">
             <div class="about-data">
                 <span>About Me</span>
-                <h2>I am a very enthusiastic software developer and lover of technology. <br>  I like to be in constant learning because of that I am a self-taught person very focused on his goals.</h2>
+                <h2>iOS Developer, Web Developer, Backend Developer</h2>
                 <a href="assets/docs/cvEduardoValadez.pdf" class="btn" download="">
                     Download CV
                     <i class='bx bx-download'></i>
