--- a/index.html
+++ b/index.html
@@ -71,14 +71,17 @@
         <div class="about-content">
             <div class="about-data">
                 <span>About Me</span>
-                <h2>iOS Developer, Web Developer, <br> Backend Developer</h2>
+                <h2>iOS Developer, Web Developer, Backend Developer</h2>
                 <a href="assets/docs/cvEduardoValadez.pdf" class="btn" download="">
                     Download CV
                     <i class='bx bx-download'></i>
                 </a>
+                <div class="about-text">
+                    <p>I am a very enthusiastic software developer and lover of technology. <br>  I like to be in constant learning because of that I am a self-taught person very focused on his goals.</p>
+                </div>
             </div>
             <div class="about-text">
-                <div class="tabs">
+               <div class="tabs">
                     <div class="tab-header">
                         <div class="active">
                             <i class='bx bx-code'></i>Skills
