Add portfolio section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="social">
                     <a href="https://www.linkedin.com/in/eduardovaladezv"><i class='bx bxl-linkedin-square'  alt="LinkedIn"></i></a>
                     <a href="https://www.instagram.com/lalovaladez.99"><i class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-github'></i></a>
+                    <a href="https://github.com/Lalovaladezvv1"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
         </div>
@@ -108,6 +108,28 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab saepe sapiente perferendis dolor quo corrupti. Asperiores exercitationem voluptatum cupiditate quam eius, totam tempore magni minus nulla aperiam odit error suscipit.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio -->
+    <section class="portfolio container" id="portfolio">
+        <!-- heading -->
+        <h2 class="heading">Portfolio</h2>
+        <div class="portfolio-content">
+            <div class="portfolio-box">
+                <img src="assets/img/paika.png" alt="" class="portfolio-img">
+                <div class="portfolio-overlay">
+                    <h2>Web Development</h2>
+                    <a href="https://paika.app/"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="assets/img/paika.png" alt="" class="portfolio-img">
+                <div class="portfolio-overlay">
+                    <h2>iOS Development</h2>
+                    <!-- <a href=""><i class='bx bx-link-external' ></i></a> -->
                 </div>
             </div>
         </div>
