--- a/index.html
+++ b/index.html
@@ -95,53 +95,118 @@
                     </div>
                     <div class="tab-indicator"></div>
                     <div class="tab-body">
-                        <div class="active">
-                                <h2>Skills</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab saepe sapiente perferendis dolor quo corrupti. Asperiores exercitationem voluptatum cupiditate quam eius, totam tempore magni minus nulla aperiam odit error suscipit.</p>
+                        <div class="active" id="skills">
+                            <p>Technical Skills</p>
+                            <ul>
+                                <li>Mobile Development
+                                    <ul>
+                                        <li>• Swift (SwiftUI & UiKit)</li>
+                                        <li>• Android (Java & Kotlin)</li>
+                                        <li>• Flutter (Dart)</li>
+                                    </ul>
+                                </li>
+                                <li>Web Development
+                                    <ul>
+                                        <li>• Html</li>
+                                        <li>• Css</li>
+                                        <li>• Javascript</li>
+                                    </ul>
+                                </li>
+                                <li>Backend Development
+                                    <ul>
+                                        <li>• Node JS</li>
+                                        <li>• FastAPI</li>
+                                        <li>• Spring</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                            <p>Soft Skills</p>
+                            <ul>
+                                <li>Critical Thinking
+                                    <ul>
+                                        <li>• Willingness to learn</li>
+                                        <li>• Troubleshooting skills</li>
+                                        <li>• Problem-solving</li>
+                                    </ul>
+                                </li>
+                                <li>Leadership
+                                    <ul>
+                                        <li>• Giving clear feedback</li>
+                                        <li>• Delegation</li>
+                                        <li>• Decision-making</li>
+                                    </ul>
+                                </li>
+                                <li>Teamwork
+                                    <ul>
+                                        <li>• Accepting feedback</li>
+                                        <li>• Emotional intelligence</li>
+                                        <li>• Team building</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
-                        <div>
-                            <div class="timeline-container">
+                        <div class="timeline-container">
                                 <ul>
                                     <li>
                                         <span></span>
-                                        <div class="timeline-title">Paika</div>
-                                        <div class="timeline-ubication"><i class='bx bxs-map-pin'></i> San Francisco, CA (USA)</div>
-                                        <div class="timeline-info">iOS Developer, Web Developer and Backend Developer.</div>
-                                        <div class="timeline-type">Remote</div>
-                                        <div class="timeline-time">
-                                            <span>August 2022</span>
+                                        <divTab class="timeline-title">Paika APP</divTab><br>
+                                        <divTab class="timeline-ubication"><i class='bx bxs-map-pin'></i> San Francisco, CA (USA)</divTab><br>
+                                        <divTab class="timeline-info">iOS Developer, Web Developer and Backend Developer.</divTab><br>
+                                        <divTab class="timeline-type">Remote</divTab>
+                                        <divTab class="timeline-time">
+                                            <span>September 2022</span>
                                             <span>Juy 2021</span>
-                                        </div>
+                                        </divTab>
                                     </li>
                                     <li>
                                         <span></span>
-                                        <div class="timeline-title">AWS Mentefactura Gto Challenge</div>
-                                        <div class="timeline-ubication"><i class='bx bxs-map-pin'></i> Guanajuato, Mexico</div>
-                                        <div class="timeline-info">Mobile Developer (Flutter).</div>
-                                        <div class="timeline-type">Remote (Hackathon)</div>
-                                        <div class="timeline-time">
+                                        <divTab class="timeline-title">
+                                            AWS Mentefactura Gto Challenge
+                                        </divTab><br>
+                                        <divTab class="timeline-ubication"><i class='bx bxs-map-pin'></i> 
+                                            Guanajuato, Mexico
+                                        </divTab><br>
+                                        <divTab class="timeline-info">
+                                            Mobile Developer (Flutter).
+                                        </divTab><br>
+                                        <divTab class="timeline-type">
+                                            Remote (Hackathon)
+                                        </divTab><br>
+                                        <divTab class="timeline-time">
                                             <span>March 2021</span>
                                             <span>March 2021</span>
-                                        </div>
+                                        </divTab>
                                     </li>
                                     <li>
                                         <span></span>
-                                        <div class="timeline-title">Concurso Nacional de Protipos XXI</div>
-                                        <div class="timeline-ubication"><i class='bx bxs-map-pin'></i> Mérida, Yucatán, Mexico</div>
-                                        <div class="timeline-info">Mobile Developer with augmented reality (Unity).</div>
-                                        <div class="timeline-type">Face-to-face</div>
-                                        <div class="timeline-time">
+                                        <divTab class="timeline-title">Concurso Nacional de Protipos XXI</divTab><br>
+                                        <divTab class="timeline-ubication"><i class='bx bxs-map-pin'></i> Mérida, Yucatán, Mexico</divTab><br>
+                                        <divTab class="timeline-info">Mobile Developer with augmented reality (Unity).</divTab><br>
+                                        <divTab class="timeline-type">Face-to-face</divTab><br>
+                                        <divTab class="timeline-time">
                                             <span>May 2018</span>
                                             <span>May 2018</span>
-                                        </div>
+                                        </divTab>
                                     </li>
                                 </ul>
                                 <a href="assets/docs/cvEduardoValadez.pdf" download="">More...</a>
-                            </div>
+
                         </div>
-                        <div>
-                            <h2>Education</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab saepe sapiente perferendis dolor quo corrupti. Asperiores exercitationem voluptatum cupiditate quam eius, totam tempore magni minus nulla aperiam odit error suscipit.</p>
+                        <div id="education">
+                            <br>
+                            <ul>
+                                <li>Universidad Politécnica De Pénjamo UPPE
+                                    <ul>
+                                        <li>Software Engineer</li>
+                                    </ul>
+                                </li>
+                                <br>
+                                <li>CBTis No. 171
+                                    <ul>
+                                        <li>Programming technician</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
