--- a/index.html
+++ b/index.html
@@ -154,38 +154,38 @@
                                         <divTab class="timeline-info">iOS Developer, Web Developer and Backend Developer.</divTab><br>
                                         <divTab class="timeline-type">Remote</divTab>
                                         <divTab class="timeline-time">
-                                            <span>September 2022</span>
+                                            <span>March 2023</span>
                                             <span>Juy 2021</span>
                                         </divTab>
                                     </li>
                                     <li>
                                         <span></span>
                                         <divTab class="timeline-title">
-                                            AWS Mentefactura Gto Challenge
+                                            Bnext
                                         </divTab><br>
                                         <divTab class="timeline-ubication"><i class='bx bxs-map-pin'></i> 
-                                            Guanajuato, Mexico
+                                            Monterrey,Nuevo Leon, Mexico
                                         </divTab><br>
                                         <divTab class="timeline-info">
                                             Mobile Developer (Flutter).
                                         </divTab><br>
                                         <divTab class="timeline-type">
-                                            Remote (Hackathon)
+                                            Remote 
                                         </divTab><br>
                                         <divTab class="timeline-time">
-                                            <span>March 2021</span>
-                                            <span>March 2021</span>
+                                            <span>March 2023</span>
+                                            <span>January 2023</span>
                                         </divTab>
                                     </li>
                                     <li>
                                         <span></span>
-                                        <divTab class="timeline-title">Concurso Nacional de Protipos XXI</divTab><br>
-                                        <divTab class="timeline-ubication"><i class='bx bxs-map-pin'></i> Mérida, Yucatán, Mexico</divTab><br>
-                                        <divTab class="timeline-info">Mobile Developer with augmented reality (Unity).</divTab><br>
-                                        <divTab class="timeline-type">Face-to-face</divTab><br>
+                                        <divTab class="timeline-title">MovilPyme</divTab><br>
+                                        <divTab class="timeline-ubication"><i class='bx bxs-map-pin'></i> CDMX</divTab><br>
+                                        <divTab class="timeline-info">Mobile Developer.</divTab><br>
+                                        <divTab class="timeline-type">Remote</divTab><br>
                                         <divTab class="timeline-time">
-                                            <span>May 2018</span>
-                                            <span>May 2018</span>
+                                            <span>December 2023</span>
+                                            <span>November 2022</span>
                                         </divTab>
                                     </li>
                                 </ul>
