Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                         <divTab class="timeline-type">Remote</divTab>
                                         <divTab class="timeline-time">
                                             <span>March 2023</span>
-                                            <span>Juy 2021</span>
+                                            <span>July 2021</span>
                                         </divTab>
                                     </li>
                                     <li>
