--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Animate css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <!-- Scroll top -->
@@ -45,10 +51,12 @@
     <!-- Home -->
     <section class="home container" id="home">
       <div class="home-content">
-        <div class="home-img">
+        <div class="home-img animate__animated animate__fadeInLeft">
           <img src="assets/img/profile.png" alt="Eduardo Valadez" />
         </div>
-        <div class="home-text">
+        <div
+          class="home-text animate__animated animate__bounceInUp animate__delay-1s"
+        >
           <h3>Software Developer</h3>
           <h2>Hi, I'm <span class="color">Eduardo</span></h2>
           <p>I invite you to know about me</p>
@@ -194,8 +202,8 @@
                     <span></span>
                     <divTab class="timeline-title"> Bnext </divTab><br />
                     <divTab class="timeline-ubication"
-                      ><i class="bx bxs-map-pin"></i>
-                      Monterrey,Nuevo Leon, Mexico </divTab
+                      ><i class="bx bxs-map-pin"></i> Monterrey,Nuevo Leon,
+                      Mexico </divTab
                     ><br />
                     <divTab class="timeline-info">
                       Mobile Developer (Flutter). </divTab
