update index page

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <a href="#" class="logo">Eduardo Valadez</a>
         <!-- Navbar -->
         <ul class="navbar">
-          <li><a href="#home" class="nav-link">HOME</a></li>
-          <li><a href="#about" class="nav-link">ABOUT</a></li>
-          <li><a href="#portfolio" class="nav-link">PORTFOLIO</a></li>
-          <li><a href="#contact" class="nav-link">CONTACT</a></li>
+          <li><a href="#home" class="nav-link">INICIO</a></li>
+          <li><a href="#about" class="nav-link">ACERCA DE</a></li>
+          <li><a href="#portfolio" class="nav-link">PORTAFOLIO</a></li>
+          <li><a href="#contact" class="nav-link">CONTACTO</a></li>
         </ul>
         <!-- Menu Icon-->
         <div class="menu-icon">
@@ -57,9 +57,9 @@
         <div
           class="home-text animate__animated animate__bounceInUp animate__delay-1s"
         >
-          <h3>Software Developer</h3>
-          <h2>Hi, I'm <span class="color">Eduardo</span></h2>
-          <p>I invite you to know about me</p>
+          <h3>INGENIERO EN SOFTWARE</h3>
+          <h2>Hola, Soy <span class="color">Eduardo</span></h2>
+          <p>Te invito a saber de mi</p>
 
           <!-- Social -->
           <div class="social">
@@ -80,22 +80,22 @@
     <!-- About -->
     <section class="about container" id="about">
       <!-- heading -->
-      <h2 class="heading">About</h2>
+      <h2 class="heading">Acerca de</h2>
       <!-- about content -->
       <div class="about-content">
         <div class="about-data">
-          <span>About Me</span>
-          <h2>iOS Developer, Web Developer, Backend Developer</h2>
+          <span>Acerca de mí</span>
+          <h2>Desarrollador de Software</h2>
           <div class="about-text">
             <p>
-              I am a very enthusiastic software developer and lover of
-              technology. <br />
-              I like to be in constant learning because of that I am a
-              self-taught person very focused on his goals.
+              Soy un desarrollador de software muy entusiasta y amante de la
+              tecnología.<br />
+              Me gusta estar en constante aprendizaje por eso soy una persona
+              autodidacta muy enfocada en sus objetivos.
             </p>
           </div>
           <a href="assets/docs/cvEduardoValadez.pdf" class="btn" download="">
-            Download CV
+            Descargar CV
             <i class="bx bx-download"></i>
             <div class="progress-wrapper">
               <div class="inner"></div>
@@ -118,16 +118,16 @@
           <div class="tabs">
             <div class="tab-header">
               <div class="active"><i class="bx bx-code"></i>Skills</div>
-              <div><i class="bx bxl-dev-to"></i> Experience</div>
-              <div><i class="bx bx-book-open"></i> Education</div>
+              <div><i class="bx bxl-dev-to"></i> Experiencia</div>
+              <div><i class="bx bx-book-open"></i> Educación</div>
             </div>
             <div class="tab-indicator"></div>
             <div class="tab-body">
               <div class="active" id="skills">
-                <p>Technical Skills</p>
+                <p>Habilidades técnicas</p>
                 <ul>
                   <li>
-                    Mobile Development
+                    Desarrollo Móvil
                     <ul>
                       <li>• Swift (SwiftUI & UiKit)</li>
                       <li>• Android (Java & Kotlin)</li>
@@ -135,46 +135,44 @@
                     </ul>
                   </li>
                   <li>
-                    Web Development
+                    Desarrollo Web
                     <ul>
                       <li>• Html</li>
                       <li>• Css</li>
                       <li>• Javascript</li>
+                      <li>• PHP</li>
                     </ul>
                   </li>
                   <li>
-                    Backend Development
+                    Desarrollo Backend
                     <ul>
                       <li>• Node JS</li>
-                      <li>• FastAPI</li>
-                      <li>• Spring</li>
                     </ul>
                   </li>
                 </ul>
-                <p>Soft Skills</p>
+                <p>Habilidades blandas</p>
                 <ul>
                   <li>
-                    Critical Thinking
+                    Pensamiento crítico
                     <ul>
-                      <li>• Willingness to learn</li>
-                      <li>• Troubleshooting skills</li>
-                      <li>• Problem-solving</li>
+                      <li>• Voluntad de aprender</li>
+                      <li>• Habilidades para solucionar problemas</li>
                     </ul>
                   </li>
                   <li>
-                    Leadership
+                    Liderazgo
                     <ul>
-                      <li>• Giving clear feedback</li>
-                      <li>• Delegation</li>
-                      <li>• Decision-making</li>
+                      <li>• Dar retroalimentación clara</li>
+                      <li>• Delegación</li>
+                      <li>• Toma de decisiones</li>
                     </ul>
                   </li>
                   <li>
-                    Teamwork
+                    Trabajo en equipo
                     <ul>
-                      <li>• Accepting feedback</li>
-                      <li>• Emotional intelligence</li>
-                      <li>• Team building</li>
+                      <li>• Aceptación de comentarios</li>
+                      <li>• Inteligencia emocional</li>
+                      <li>• Formación de equipos</li>
                     </ul>
                   </li>
                 </ul>
@@ -183,54 +181,49 @@
                 <ul>
                   <li>
                     <span></span>
+                    <divTab class="timeline-title"
+                      >Universidad Politécnica de Pénjamo</divTab
+                    ><br />
+                    <divTab class="timeline-ubication"
+                      ><i class="bx bxs-map-pin"></i> Pénjamo, Guanajuato, Mex. </divTab
+                    ><br />
+                    <divTab class="timeline-info">
+                      Desarrollé con PHP un módulo para el sistema integral de
+                      la universidad, para la captura de calificaciones y la
+                      generación automatizada de actas finales y listas de
+                      asistencia en PDF y Excel. </divTab
+                    ><br />
+                    <br />
+                    <h6>Prácticas profesionales</h6>
+                    <divTab class="timeline-type"> Presencial </divTab><br />
+                    <divTab class="timeline-time">
+                      <span>Diciembre 2023</span>
+                      <span>Septiembre 2023</span>
+                    </divTab>
+                  </li>
+                  <li>
+                    <span></span>
                     <divTab class="timeline-title">Paika APP</divTab><br />
                     <divTab class="timeline-ubication"
                       ><i class="bx bxs-map-pin"></i> San Francisco, CA
                       (USA)</divTab
                     ><br />
                     <divTab class="timeline-info"
-                      >iOS Developer, Web Developer and Backend
-                      Developer.</divTab
+                      >Lideré el desarrollo completo de un sistema de
+                      videollamadas y comunicación en tiempo real, además
+                      trabajé en el frontend y backend, utilizando tecnologías
+                      como SwiftUI (Swift), Flutter (Dart), NodeJS (JavaScript),
+                      MySQL y Amazon Web Services (EC2).</divTab
                     ><br />
-                    <divTab class="timeline-type">Remote</divTab>
+                    <divTab class="timeline-type">Remoto</divTab>
                     <divTab class="timeline-time">
-                      <span>July 2023</span>
-                      <span>July 2021</span>
-                    </divTab>
-                  </li>
-                  <li>
-                    <span></span>
-                    <divTab class="timeline-title"> Bnext </divTab><br />
-                    <divTab class="timeline-ubication"
-                      ><i class="bx bxs-map-pin"></i> Monterrey,Nuevo Leon,
-                      Mexico </divTab
-                    ><br />
-                    <divTab class="timeline-info">
-                      Mobile Developer (Flutter). </divTab
-                    ><br />
-                    <divTab class="timeline-type"> Remote </divTab><br />
-                    <divTab class="timeline-time">
-                      <span>March 2023</span>
-                      <span>January 2023</span>
-                    </divTab>
-                  </li>
-                  <li>
-                    <span></span>
-                    <divTab class="timeline-title">MovilPyme</divTab><br />
-                    <divTab class="timeline-ubication"
-                      ><i class="bx bxs-map-pin"></i> CDMX</divTab
-                    ><br />
-                    <divTab class="timeline-info">Mobile Developer.</divTab
-                    ><br />
-                    <divTab class="timeline-type">Remote</divTab><br />
-                    <divTab class="timeline-time">
-                      <span>December 2023</span>
-                      <span>November 2022</span>
+                      <span>Agosto 2023</span>
+                      <span>Julio 2021</span>
                     </divTab>
                   </li>
                 </ul>
                 <a href="assets/docs/cvEduardoValadez.pdf" download=""
-                  >More...</a
+                  >Más...</a
                 >
               </div>
               <div id="education">
@@ -239,14 +232,14 @@
                   <li>
                     Universidad Politécnica De Pénjamo UPPE
                     <ul>
-                      <li>Software Engineer</li>
+                      <li>Ingeniería en Software</li>
                     </ul>
                   </li>
                   <br />
                   <li>
                     CBTis No. 171
                     <ul>
-                      <li>Programming technician</li>
+                      <li>Técnico en Programación</li>
                     </ul>
                   </li>
                 </ul>
@@ -260,20 +253,20 @@
     <!-- Portfolio -->
     <section class="portfolio container" id="portfolio">
       <!-- heading -->
-      <h2 class="heading">Portfolio</h2>
+      <h2 class="heading">Portafolio</h2>
       <div class="portfolio-content">
         <div class="portfolio-box">
           <img src="assets/img/paika.png" alt="" class="portfolio-img" />
           <div class="portfolio-overlay">
-            <h2>Web Development</h2>
-            <a href="https://paika.app/"><i class="bx bx-link-external"></i></a>
+            <h2>Desarrollo Web</h2>
+            <a href="web.html"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
           <img src="assets/img/paika.png" alt="" class="portfolio-img" />
           <div class="portfolio-overlay">
-            <h2>iOS Development</h2>
-            <!-- <a href=""><i class='bx bx-link-external' ></i></a> -->
+            <h2>Desarrollo Movil</h2>
+            <a href="movil.html"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
@@ -282,14 +275,14 @@
     <!-- Contact form -->
     <section class="contact container" id="contact">
       <!-- heading -->
-      <h2 class="heading">Contact</h2>
+      <h2 class="heading">Contacto</h2>
       <!-- contact form-->
       <form action="" class="contact-form" id="contact-form">
-        <input type="text" placeholder="Your name" class="name" required />
+        <input type="text" placeholder="Tu nombre" class="name" required />
         <input
           type="email"
           name=""
-          placeholder="Email addres"
+          placeholder="Email"
           class="email"
           required
         />
@@ -298,11 +291,11 @@
           id=""
           cols="30"
           rows="10"
-          placeholder="Write message here..."
+          placeholder="Escribe el mensaje aquí..."
           class="message"
           required
         ></textarea>
-        <input type="submit" value="send" class="send-btn" />
+        <input type="submit" value="Enviar" class="send-btn" />
       </form>
     </section>
 
@@ -318,7 +311,7 @@
         <a href="#"><i class="bx bxl-github"></i></a>
       </div>
       <!-- Copyright -->
-      <p>&#169; Eduardo Valadez</p>
+      <p>&#169; Eduardo Valadéz</p>
     </section>
 
     <!-- Link JS -->
