--- a/web.html
+++ b/web.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="esp">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -52,8 +52,11 @@
 
     <!-- Web -->
     <!-- heading -->
-    <section>
+    <section class="project">
       <h2 class="heading">Desarrollo Web</h2>
+      <div class="carrusel"></div>
+      <h2>Modulo Capturar calificaciones</h2>
+      <p>Descripción</p>
     </section>
 
     <!-- Footer -->
