update carrusel de proyectos

--- a/web.html
+++ b/web.html
@@ -52,11 +52,43 @@
 
     <!-- Web -->
     <!-- heading -->
-    <section class="project">
+    <section class="projects-web">
+      <br />
       <h2 class="heading">Desarrollo Web</h2>
-      <div class="carrusel"></div>
-      <h2>Modulo Capturar calificaciones</h2>
-      <p>Descripción</p>
+      <div class="project">
+        <div class="wrapper">
+          <div class="wrapper-holder">
+            <div id="slider-img-1" class="slider-img">
+              <img src="assets/img/profile.png" alt="" />
+            </div>
+            <div id="slider-img-2">
+              <img src="assets/img/paika.png" alt="" />
+            </div>
+            <div id="slider-img-3"></div>
+            <div id="slider-img-4"></div>
+          </div>
+        </div>
+        <div class="button-holder">
+          <a href="#slider-img-1" class="button"> </a>
+          <a href="#slider-img-2" class="button"> </a>
+          <a href="#slider-img-3" class="button"></a>
+          <a href="#slider-img-4" class="button"></a>
+        </div>
+        <h2>Modulo Captura de Calificaciones y Faltas</h2>
+        <p>
+          En la Universidad Politécnica de Pénjamo, desempeñé un papel crucial
+          en el desarrollo de un módulo integral para la plataforma en línea. Mi
+          enfoque principal fue la creación de un sistema eficiente para la
+          captura y gestión de calificaciones y faltas de los alumnos,
+          específicamente por materia. Mi responsabilidad abarcó desde el diseño
+          de la interfaz gráfica hasta la implementación de funciones clave,
+          como la generación automatizada de actas finales en formato PDF,
+          simplificando así la carga de trabajo para los profesores y agilizando
+          la gestión académica. Esta experiencia fortaleció mis habilidades
+          técnicas y dejó una marca positiva en el Departamento de Sistemas de
+          la universidad.
+        </p>
+      </div>
     </section>
 
     <!-- Footer -->
