--- a/web.html
+++ b/web.html
@@ -59,13 +59,17 @@
         <div class="wrapper">
           <div class="wrapper-holder">
             <div id="slider-img-1" class="slider-img">
-              <img src="assets/img/profile.png" alt="" />
+              <img src="assets/img/projects/web/upp/1.png" alt="" />
             </div>
             <div id="slider-img-2">
-              <img src="assets/img/paika.png" alt="" />
+              <img src="assets/img/projects/web/upp/2.png" alt="" />
             </div>
-            <div id="slider-img-3"></div>
-            <div id="slider-img-4"></div>
+            <div id="slider-img-3">
+              <img src="assets/img/projects/web/upp/3.png" alt="" />
+            </div>
+            <div id="slider-img-4">
+              <img src="assets/img/projects/web/upp/4.png" alt="" />
+            </div>
           </div>
         </div>
         <div class="button-holder">
